1.5 (XXX)
---------

* Make splitter between tabs and content browser as thin as the one
  between the sidebar and the rest of the window.


1.4 (2010-01-21)
----------------

* Styling on Firefox 3.6 has been much improved, but as a consequence
  Firefox 3.6 is now required.

* Improve look-and-feel of tree twisty triangles for the selected tab.


1.3 (2010-01-21)
----------------

* Fixed colour of tab count bubbles when Firefox window isn't active.

* Display all icons at full opacity.

* Prevent the tab contents from moving about when selected and
  deselected.

* Improve spacing (which unfortunately makes the styling on Firefox
  3.6 slightly worse.)


1.2 (2010-01-14)
----------------

* Improved look-and-feel of the selected tab.  Thanks to Jeff Balogh
  for suggestions.

* Explicitly set the tab label font colour so that a non-standard
  setting from Personas won't interfere.

* Preliminary support for Firefox 3.6.


1.1 (2010-01-12)
----------------

* Changed the tree twisty triangles to the ones familiar from the
  native Mac OS X tree widget.

* The child-tab count now appears in bubbles familiar from other Mac OS X
  applications like Mail.app.

* Fixed a subtlety concerning the separator between the tab bar and
  the content window.

* Moved the "new tab" button (+) from the tab bar to the status bar on
  the bottom left, much like the bottom-left buttons in Mail.app and
  other Mac OS X applications.


1.0 (2010-01-11)
----------------

Initial release.